@@ -103,7 +103,7 @@ print.summary.warnings <- function(x, ...) {
 ##' @param allowed not yet implemented: character vector of *named* elements in '...'
 ##' which are \dQuote{allowed} and hence not warned about
 chkDots <- function(..., which.call = -1, allowed = character(0)) {
-    if(nx <- length(list(...))) ## <- or  if(missing(...)) ?
+    if(nx <- ...length())
 	warning(sprintf(ngettext(nx,
 				 "In %s :\n extra argument %s will be disregarded",
 				 "In %s :\n extra arguments %s will be disregarded"),
